--- a/mssge/doc/vlbipa.tex
+++ b/mssge/doc/vlbipa.tex
@@ -169,11 +169,11 @@ signal.  Normally this register will read 0, but since the external 1~PPS
 signal is not synchronous with the ADC sample clock, values of 1 or
 256,000,000 are also acceptable.  Other values indicate a problem.
 
-\roreg{onepps\_sync/ext\_cnt} This register contains to number of rising edges
+\roreg{onepps\_sync/ext\_cnt} This register contains the number of rising edges
 seen on the external 1~PPS signal since the last re-arming of the internal
 1~PPS signal.
 
-\roreg{onepps\_sync/ext\_period} This register contains to number of FPGA clock
+\roreg{onepps\_sync/ext\_period} This register contains the number of FPGA clock
 cycles between the two most recent rising edges seen on the external 1~PPS
 signal.  It should read 256,000,000 $\pm$ 1.
 
@@ -230,11 +230,11 @@ is not commensurate with the ADC clock period, values of 1 or 165,191,049 (plus
 or minus a few clock cycles) are also acceptable.  Other values indicate a
 problem.
 
-\roreg{hb\_sync/ext\_cnt} This register contains to number of rising edges seen
-on the external SOWF signal since the last re-arming of the internal SOWF
+\roreg{hb\_sync/ext\_cnt} This register contains the number of rising edges
+seen on the external SOWF signal since the last re-arming of the internal SOWF
 signal.
 
-\roreg{hb\_sync/ext\_period} This register contains to number of FPGA clock
+\roreg{hb\_sync/ext\_period} This register contains the number of FPGA clock
 cycles between the two most recent rising edges seen on the external SOWF
 signal.  It should read 165,191,049 $\pm$ 2.
 
@@ -632,8 +632,9 @@ calibration correlator and the DBE.  Before being sent to the DBE, the four
 Before the sum each input signal is multiplied by a gain factor.  This gain
 factor is intended to weight the inputs according to system temperature, but
 thus far they have been used only to scale all inputs equally or to zero out an
-input to exclude it from the sum.  The sum is scaled by~$\frac{1}{2}$
-or~$\frac{1}{4}$ and then rounded to 8~bits prevent overflow.
+input to exclude it from the sum.  The sum can be scaled by~$\frac{1}{2}$
+or~$\frac{1}{4}$ (see the \verb|summer/shift| register) before rounding to
+8~bits prevent to overflow.
 
 \begin{description}
 
