Misc doc update about IPA's front panel SMAs
SMA0 is the upper connector.
SMA1 is the lower connector.

--- a/mssge/doc/vlbipa.tex
+++ b/mssge/doc/vlbipa.tex
@@ -898,7 +898,7 @@ implies a similar status for its transmit side.
 \begin{description}
 
 \rwreg{smasel} Selects which signal to output over the front panel \verb|SMA0|
-connector.
+(upper) connector.
 
 \vspace{2\parskip}
 \begin{bytefield}{32}
@@ -917,7 +917,7 @@ connector.
 
 \filbreak
 \rwreg{monsel} Selects which signal to output over the front panel \verb|SMA1|
-connector.
+(lower) connector.
 
 \vspace{2\parskip}
 \begin{bytefield}{32}
